nginx-deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: symfony-nginx-deployment
spec:
  selector:
    matchLabels:
      app: symfony-nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: symfony-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.8
        ports:
        - containerPort: 80
        volumeMounts:
        - name: symfony-vhost-volume
          mountPath: /etc/nginx/conf.d/
        - name: index-php-volume
          mountPath: /srv/app/public/
      volumes:
      - name: symfony-vhost-volume
        configMap:
          # name of the ConfigMap
          name: nginx-configmap
      - name: index-php-volume
        configMap:
          name: index-php-configmap
