fpm-service.yml
apiVersion: v1
kind: Service
metadata:
  name: symfony-fpm-service
spec:
  selector:
    app: symfony-fpm
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
