nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: symfony-nginx-service
spec:
  selector:
    app: symfony-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
