nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: symfony-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: symfony.local
    http:
      paths:
      - path: /
        backend:
          serviceName: symfony-nginx-service
          servicePort: 80
